--- a/frontend_dashboard.html
+++ b/frontend_dashboard.html
@@ -163,9 +163,9 @@
                             </div>
                         </div>
                         <p class="text-[10px] text-emerald-600 font-bold mt-2 uppercase tracking-wider">${deal.recommendation.split('|')[0]}</p>
-                        <button class="w-full mt-4 border-2 border-emerald-600 text-emerald-600 py-2 rounded-lg font-bold hover:bg-emerald-50 transition">
+                        <a href="${deal.url}" target="_blank" class="block w-full mt-4 bg-white border-2 border-emerald-600 text-emerald-600 py-2 rounded-lg font-bold hover:bg-emerald-50 transition text-center">
                             Details (via ${deal.source})
-                        </button>
+                        </a>
                     </div>
                 </div>
             `).join('');
