--- a/frontend_dashboard.html
+++ b/frontend_dashboard.html
@@ -39,25 +39,25 @@
             <div class="space-y-4">
                 <div>
                     <label class="block text-sm font-medium text-gray-700">Reiseziele</label>
-                    <input type="text" value="Amsterdam, Zandvoort, Rotterdam" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border focus:ring-emerald-500 focus:border-emerald-500">
+                    <input type="text" id="input-cities" value="Amsterdam, Zandvoort, Rotterdam" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border focus:ring-emerald-500 focus:border-emerald-500">
                 </div>
                 
                 <div class="grid grid-cols-2 gap-2">
                     <div>
                         <label class="block text-sm font-medium text-gray-700">Check-In</label>
-                        <input type="date" value="2026-02-15" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
+                        <input type="date" id="input-checkin" value="2026-02-15" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
                     </div>
                     <div>
                         <label class="block text-sm font-medium text-gray-700">Check-Out</label>
-                        <input type="date" value="2026-02-22" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
+                        <input type="date" id="input-checkout" value="2026-02-22" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
                     </div>
                 </div>
 
                 <div>
                     <label class="block text-sm font-medium text-gray-700">Gäste</label>
-                    <select class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
-                        <option>4 Personen + 1 Hund</option>
-                        <option>2 Personen + 1 Hund</option>
+                    <select id="input-guests" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm p-2 bg-gray-50 border">
+                        <option value="4">4 Personen + 1 Hund</option>
+                        <option value="2">2 Personen + 1 Hund</option>
                     </select>
                 </div>
 
@@ -101,24 +101,30 @@
         const statusText = document.getElementById('status-text');
 
         searchBtn.addEventListener('click', async () => {
-            const cities = "Amsterdam, Zandvoort, Rotterdam"; // Könnte man dynamisch aus Input lesen
-            const checkin = "2026-02-15";
-            const checkout = "2026-02-22";
+            const cities = document.getElementById('input-cities').value;
+            const checkin = document.getElementById('input-checkin').value;
+            const checkout = document.getElementById('input-checkout').value;
+            const adults = document.getElementById('input-guests').value;
+
+            if (!cities || !checkin || !checkout) {
+                alert("Bitte fülle alle Felder aus!");
+                return;
+            }
 
             // Lade-Anzeige
             searchBtn.disabled = true;
             searchBtn.innerHTML = '<i class="fa-solid fa-circle-notch fa-spin mr-2"></i> Suche läuft...';
-            dealGrid.innerHTML = '<div class="col-span-2 text-center py-20"><i class="fa-solid fa-compass fa-spin fa-3x text-emerald-600 mb-4"></i><p class="text-lg">Wir durchsuchen Booking.com, Airbnb und Center Parcs...</p></div>';
+            dealGrid.innerHTML = '<div class="col-span-2 text-center py-20"><i class="fa-solid fa-compass fa-spin fa-3x text-emerald-600 mb-4"></i><p class="text-lg font-bold">Live-Suche aktiv...</p><p class="text-gray-500">Wir durchsuchen Booking.com und Airbnb (ca. 60 Sek.)</p></div>';
 
             try {
-                const response = await fetch(`/search?cities=${encodeURIComponent(cities)}&checkin=${checkin}&checkout=${checkout}`);
+                const response = await fetch(`/search?cities=${encodeURIComponent(cities)}&checkin=${checkin}&checkout=${checkout}&adults=${adults}`);
                 const data = await response.json();
 
                 renderDeals(data.top_10_deals);
-                statusText.innerText = `${data.total_deals_found} Deals gefunden für ${data.search_params.nights} Nächte`;
+                statusText.innerText = `${data.top_10_deals.length} echte Deals verifiziert für ${data.search_params.nights} Nächte`;
             } catch (error) {
                 console.error('Error:', error);
-                dealGrid.innerHTML = '<div class="col-span-2 text-center py-20 text-red-500"><i class="fa-solid fa-circle-exclamation fa-3x mb-4"></i><p>Fehler bei der Suche. Ist das Backend (api.py) gestartet?</p></div>';
+                dealGrid.innerHTML = '<div class="col-span-2 text-center py-20 text-red-500"><i class="fa-solid fa-circle-exclamation fa-3x mb-4"></i><p>Fehler bei der Suche. Ist das Backend online?</p></div>';
             } finally {
                 searchBtn.disabled = false;
                 searchBtn.innerHTML = 'Angebote finden';
