feat: markdown-based firecrawl scraper and anonymized dashboard links

--- a/frontend_dashboard.html
+++ b/frontend_dashboard.html
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <p class="text-[10px] text-emerald-600 font-bold mt-2 uppercase tracking-wider">${deal.recommendation.split('|')[0]}</p>
-                        <a href="${deal.url}" target="_blank" class="block w-full mt-4 bg-white border-2 border-emerald-600 text-emerald-600 py-2 rounded-lg font-bold hover:bg-emerald-50 transition text-center">
+                        <a href="${deal.url}" target="_blank" rel="noreferrer" referrerpolicy="no-referrer" class="block w-full mt-4 bg-white border-2 border-emerald-600 text-emerald-600 py-2 rounded-lg font-bold hover:bg-emerald-50 transition text-center">
                             Details (via ${deal.source})
                         </a>
                     </div>
