--- a/frontend_dashboard.html
+++ b/frontend_dashboard.html
@@ -139,9 +139,9 @@
 
             dealGrid.innerHTML = deals.map(deal => `
                 <div class="deal-card bg-white rounded-2xl shadow-sm overflow-hidden border border-gray-100 flex flex-col">
-                    <div class="relative h-48 bg-emerald-100">
+                    <div class="relative h-48 bg-gray-200">
                         <img src="${deal.image_url}" 
-                             onerror="this.src='https://images.unsplash.com/photo-1512917774080-9991f1c4c750?auto=format&fit=crop&w=800&q=80'"
+                             onerror="this.src='https://via.placeholder.com/800x450.png?text=BILD-LADE-FEHLER'"
                              alt="${deal.name}" 
                              class="object-cover w-full h-full">
                         <div class="absolute top-4 left-4 bg-white/90 backdrop-blur px-3 py-1 rounded-full text-xs font-bold text-emerald-700 flex items-center">
