--- a/frontend_dashboard.html
+++ b/frontend_dashboard.html
@@ -1686,7 +1686,7 @@
             `}).join('');
 
             if (weatherHTML) {
-                weatherDiv.innerHTML = `<div class="space-y-2">${weatherHTML}</div>`;
+                weatherDiv.innerHTML = `<div class="grid grid-cols-1 xl:grid-cols-2 gap-4">${weatherHTML}</div>`;
                 weatherDiv.classList.remove('hidden');
             } else {
                 weatherDiv.classList.add('hidden');
